# fastlabel-python-sdk

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pypi_update_guide.md  pyproject.toml  requirements.txt  setup.py  tox.ini
contributing/: README.md  requirements.txt
examples/: README.md  SDK_sample_code.ipynb  annotation.ipynb  bbox_to_visual_inspection_ai.py  count_dataset_download.py  create_dataset.py  create_dataset_object.py  create_dataset_train_model.py  create_dataset_version.py  create_image_dataset_object.py  create_image_task.py  create_project_create_task.py  create_project_from_coco.py  create_task.py  dataset.ipynb  delete_dataset.py  delete_dataset_object.py  delete_dataset_objects.py  donwload_images.py  download_dataset_objects.py  download_images.py  execute_auto_annotation_job.py  export_coco.py  export_coco_format.py  export_segmentation_file.py  export_yolo.py  find_dataset.py  find_dataset_object.py  find_dataset_version.py  find_multi_modal_video_audio_task.py  find_robotics_task.py  get_all_image_tasks.py  get_all_objects.py  get_auto_annotation_jobs.py  get_dataset_attributes.py  get_dataset_download_requests.py  get_dataset_object_annotation_stats.py  get_dataset_object_annotations.py  get_dataset_object_attribute_stats.py  get_dataset_object_import_histories.py  (+19 more)
fastlabel/: __init__.py  api.py  augmentation.py  const.py  converters.py  exceptions.py  query.py  types.py  utils.py
tests/: conftest.py  test_client_dataset.py  test_converters.py  test_converters_video.py  test_lerobot_v3_video.py  (+5 more)
(+18 files in other folders)
