[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastlabel"
description = "The official Python SDK for FastLabel API, the Data Platform for AI"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "eisuke-ueta", email = "eisuke.ueta@fastlabel.ai" }
]
dependencies = [
  "requests>=2.4.2,<3.0",
  "numpy>=1.26.0,<2.0.0",
  "geojson>=2.0.0,<4.0",
  "xmltodict==0.12.0",
  "Pillow>=10.0.0,<11.0.0",
  "opencv-python>=4.0.0,<5.0.0",
  "aiohttp>=3.8.5"
]

dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
